# qcoro

./: CMakeLists.txt  README.md  requirements.txt
.github/actions/install-qt/: action.yml
.github/workflows/: build-docker-images.yml  build-linux.yml  build-macos.yml  build-windows.yml  generate-matrix.py  update-docs.yml
cmake/: AddQCoroLibrary.cmake  QCoroFindQt.cmake
docker/: Dockerfile.clang  Dockerfile.gcc  install-clang.sh  install-qt.sh
docs/: building-and-using.md  index.md
docs/reference/core/: index.md  qfuture.md  qiodevice.md  qprocess.md  qthread.md  qtimer.md
docs/reference/coro/: asyncgenerator.md
docs/reference/dbus/: index.md  qdbuspendingcall.md  qdbuspendingreply.md
docs/reference/network/: index.md  qabstractsocket.md  qlocalsocket.md  qnetworkreply.md  qtcpserver.md
docs/reference/qml/: index.md  qmltask.md
docs/reference/quick/: imageprovider.md  index.md
docs/reference/test/: index.md
docs/reference/websockets/: index.md  qwebsocket.md  qwebsocketserver.md
qcoro/: qcorotask.h
qcoro/core/: qcorofuture.h  qcoroiodevice.h  qcoroprocess.h  qcorothread.h
qcoro/dbus/: qcorodbuspendingcall.h  qcorodbuspendingreply.h
qcoro/network/: qcoroabstractsocket.h  qcorolocalsocket.h  qcorotcpserver.h
qcoro/qml/: CMakeLists.txt  qcoroqml.h  qcoroqmltask.cpp  qcoroqmltask.h
qcoro/websockets/: qcorowebsocket.cpp
tests/: CMakeLists.txt  qcorogenerator.cpp  qcoroqmltask.cpp  qcorotask.cpp  qfuture.cpp
tests/testlibs/: CMakeLists.txt
